# Hacker-CLI-Tool

./: Cargo.toml  README.md
Cybersecurity/: Cargo.toml
Cybersecurity/src/: main.rs
hacker/: Cargo.toml
hacker-help/: go.mod  main.go
hacker-help/official/: main.go
hacker-select/: go.mod  main.go
hacker-shell/: main.py
hacker-shell/official/: main.py
hacker/atomic/: Cargo.toml  what-add-to-atomic-version
hacker/atomic/src/: commands.rs  game.rs  lib.rs  main.rs  utils.rs
hacker/official/src/: commands.rs  game.rs  lib.rs  main.rs  utils.rs
hacker/src/: commands.rs  game.rs  help.rs  lib.rs  main.rs  utils.rs
package-list/: index-package.hacker
src/: commands.rs  game.rs  help.rs  lib.rs  main.rs  utils.rs
